# Vprasalnik-Za-CI-CD

./: .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  README.md  backend-README.md  database.json  docker-compose.prod.yml  docker-compose.yml  frontend-README.md  index.html  maturity_rules.json  maturity_rules2.json  package-lock.json  package.json  questionnaire2.json  questionnaire_config.json  vite.config.js  vprasalnik.sql
.github/workflows/: ci.yml
_PROMOCIJA/: opis_projekta.txt
backend/: .env.example  CMakeLists.txt  README.md  vprasalnik.sql
backend/docs/: index.html
backend/include/cicdq/: assessment.hpp  auth.hpp  crypto.hpp  db.hpp  jwt.hpp  store.hpp  types.hpp
backend/include/cicdq/routes/: assessment.hpp  assignments.hpp  auth.hpp  categories.hpp  pipelines.hpp  questionnaire.hpp  rules.hpp
backend/src/: main.cpp
src/: App.jsx  api.js  data.js  style.css  utils.js
src/components/: AdminDashboard.jsx  Assessment1.jsx  Assessment2.jsx  Assessment3.jsx  Assessment4.jsx  AssessmentWrapper.jsx  Builder.jsx  Collapsible.jsx  Dashboard.jsx  GitHubYamlViewer.jsx  Header.jsx  LandingPage.jsx  LoginOverlay.jsx  ResultsPanel.jsx  Rules.jsx  Sidebar.jsx  UserAssessments.jsx
src/utils/: validator.js
test/: utils.test.js
